--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = conda
-url = https://github.com/conda/conda/archive/4.6.8.tar.gz
+url = https://github.com/conda/conda/archive/4.6.9/conda-4.6.9.tar.gz
 archives = 
 giturl = https://github.com/conda/conda.git
 
@@ -12,7 +12,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
