--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = conda
-url = https://github.com/conda/conda/archive/4.6.14/conda-4.6.14.tar.gz
+url = https://github.com/conda/conda/archive/4.7.0/conda-4.7.0.tar.gz
 archives = 
 giturl = https://github.com/conda/conda.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
