--- a/options.conf
+++ b/options.conf
@@ -3,6 +3,7 @@ name = conda
 url = https://github.com/conda/conda/archive/4.7.12/conda-4.7.12.tar.gz
 archives = 
 giturl = https://github.com/conda/conda.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
