[update to 4.8.3] User guide getting started and troubleshooting
Bernardo da Eira Duarte (1):
      Update manage-environments.rst

Forrest Waters (1):
      account for channel in specs

Jonathan J. Helmus (1):
      changelog 4.8.3

Tim Gates (1):
      Fix simple typo: submissve -> submissive

rrigdon (8):
      Release notes for conda 4.8.2
      Glossary updates
      Index updates
      User guide getting started and troubleshooting
      User-guide concepts
      Configuration updates
      Install direction updates
      Updates to Tasks

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = conda
-url = https://github.com/conda/conda/archive/4.8.2/conda-4.8.2.tar.gz
+url = https://github.com/conda/conda/archive/4.8.3/conda-4.8.3.tar.gz
 archives = 
 giturl = https://github.com/conda/conda.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
